objects/gcga__Gift_Aid_Claim_Specific_Process_Control__mdt.object
<CustomObject>
    <description>This Custom Metadata Type allows you to specify which Process Control settings to disable for the duration of a Gift Aid Claim. Note: This does not disable Process Control for any user anywhere in Salesforce beside of the process of submitting a Gift Aid Claim.</description>
    <fields>
        <fullName>gcga__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CGAND-259: Gift Aid Claim - Process Control during claim process</description>
        <inlineHelpText>This field determines whether the Gift Aid Claim Specific Process Control is active. If unchecked, the Process Control setting will not be overwritten to be disabled for the Gift Aid Claim process.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gcga__Namespace__c</fullName>
        <description>CGAND-259: Gift Aid Claim - Process Control during claim process</description>
        <inlineHelpText>This field specifies whether the Process Control setting is part of local Process Control, Clarity Gift Aid Process Control or NPSP&apos;s Table-Driven Trigger Management.</inlineHelpText>
        <label>Namespace</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clarity Gift Aid</fullName>
                </value>
                <value>
                    <fullName>NPSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gcga__Process_Control_Setting__c</fullName>
        <description>CGAND-259: Gift Aid Claim - Process Control during claim process</description>
        <inlineHelpText>This field specifies the Developer Name of the Process Control setting.</inlineHelpText>
        <label>Process Control Setting</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Gift Aid Claim Specific Process Control</label>
    <pluralLabel>Gift Aid Claim Specific Process Control</pluralLabel>
</CustomObject>